build: Mavenへビルド環境を移行する。Gradleとの二重管理を解消し、既存のpre-commitチェックを維持する #631 (#632)